@startuml

title __MAP's Class Diagram__\n

  namespace fr.insa.lyon.ifa1 {
    namespace models.map {
      class fr.insa.lyon.ifa1.models.map.GeoMap {
          - intersections : Map<String, Intersection>
          - segments : Map<String, Map<String, Segment>>
          + GeoMap()
          + GeoMap()
          + addIntersection()
          + addSegment()
          + getIntersection()
          + getIntersections()
          + getSegment()
          + getSegments()
          + toString()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.map {
      class fr.insa.lyon.ifa1.models.map.Intersection {
          - id : String
          - latitude : double
          - longitude : double
          + Intersection()
          + getId()
          + getLatitude()
          + getLongitude()
          + setLatitude()
          + setLongitude()
          + toString()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.map {
      class fr.insa.lyon.ifa1.models.map.Segment {
          - length : double
          - name : String
          + Segment()
          + getDest()
          + getLength()
          + getName()
          + getOrigin()
          + toString()
      }
    }
  }
  

  fr.insa.lyon.ifa1.models.map.Segment o-- fr.insa.lyon.ifa1.models.map.Intersection : dest
  fr.insa.lyon.ifa1.models.map.Segment o-- fr.insa.lyon.ifa1.models.map.Intersection : origin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
